--- a/Views/Home/Products.cshtml
+++ b/Views/Home/Products.cshtml
@@ -6,36 +6,29 @@
 
     <div class="row">
 
+        <!-- Filters section -->
         <div class="col-md-2 col-sm-12">
-            <div class="d-flex flex-column">
-                <vc:product-category class="mb-2 flex-grow-1" />
+            <div class="d-grid gap-2">
+                <vc:product-category class="mb-2" />
                 <vc:product-color class="mb-2" />
 
                 <!-- New dropdown for selecting page size -->
-                <div class="dropdown flex-grow-1">
+                <div class="dropdown">
                     <button class="btn btn-outline-secondary dropdown-toggle w-100" type="button" id="pageSizeDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                         Page Size
                     </button>
-                    <ul class="dropdown-menu w-100" aria-labelledby="pageSizeDropdown">
-                        <li>
-                            <a class="dropdown-item" asp-action="Products" asp-controller="Home" asp-route-pageNum="1" asp-route-pageSize="5">5</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" asp-action="Products" asp-controller="Home" asp-route-pageNum="1" asp-route-pageSize="10">10</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" asp-action="Products" asp-controller="Home" asp-route-pageNum="1" asp-route-pageSize="20">20</a>
-                        </li>
+                    <ul class="dropdown-menu" aria-labelledby="pageSizeDropdown">
+                        <li><a class="dropdown-item" asp-action="Products" asp-controller="Home" asp-route-pageNum="1" asp-route-pageSize="5">5</a></li>
+                        <li><a class="dropdown-item" asp-action="Products" asp-controller="Home" asp-route-pageNum="1" asp-route-pageSize="10">10</a></li>
+                        <li><a class="dropdown-item" asp-action="Products" asp-controller="Home" asp-route-pageNum="1" asp-route-pageSize="20">20</a></li>
                     </ul>
                 </div>
             </div>
-
         </div>
-
 
         <!-- Products list on the right -->
         <div class="col-md-10 col-sm-12">
-            <div class="row row row-cols-1 row-cols-md-1 row-cols-lg-2 g-3">
+            <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 g-3">
                 @foreach (Product p in Model.Products)
                 {
                     <partial name="ProductSummary" model="@p" />
@@ -57,11 +50,7 @@
                     </nav>
                 </div>
             </div>
-
-
-
         </div>
     </div>
 </div>
-
 
