full CRUD functionality for all tables

--- a/Views/Home/DeleteCustomer.cshtml
+++ b/Views/Home/DeleteCustomer.cshtml
@@ -1,24 +1,22 @@
 ﻿@model Customer
 
 <h2>Are you sure you want to delete @Model.FirstName @Model.LastName?</h2>
-<form method="POST">
+<form method="POST" asp-action="DeleteCustomer" style="display: inline-block;">
     <input type="hidden" asp-for="CustomerId" />
 
-    <form method="post" asp-action="DeleteCustomer">
-        <button class="btn btn-info"
-                style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
-                   color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black;
-                   font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;"
-                type="submit">
-            <b>Delete</b>
-        </button>
-    </form>
-
-    <a class="btn btn-info"
-       style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
-          color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black;
-          font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;"
-       asp-controller="Home" asp-action="AdminCustomers">
-        <b>Cancel</b>
-    </a>
+    <button class="btn btn-info"
+            style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
+                color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black;
+                font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;"
+            type="submit">
+        <b>Delete</b>
+    </button>
 </form>
+
+<a class="btn btn-info"
+   style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
+      color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black;
+      font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px; margin-left: 10px;"
+   asp-controller="Home" asp-action="AdminCustomers">
+    <b>Cancel</b>
+</a>
