--- a/Pages/_CartLayout.cshtml
+++ b/Pages/_CartLayout.cshtml
@@ -1,25 +1,62 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"]</title>
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"]</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+</head>
 
-    <body>
-        <div class="bg-dark text-white p-2">
-            <span class="navbar-brand m-lg-2">INTEX II</span>
-        </div>
-        <div class="m-1 p-1">
-            <main role="main" class="pb-3">
-                @RenderBody()
-            </main>
-        </div>
-    </body>
+<body>
+    <!-- Navbar from the first HTML file -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffd404;">
+            <div class="container-fluid">
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">
+                    <img class="img-fluid" src="~/img/yellowlogo.png" alt="..." width="100px" height="100px" />
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse d-sm-inline-flex justify-content-between align-items-start">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a style="color: black; padding: 20px; text-align: center; font-size: 20px; font-family: 'Arial Black', sans-serif;" class="nav-link text-dark" asp-controller="Home" asp-action="Index"><b>Home</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a <a style="color: black; padding: 20px; text-align: center; font-size: 20px; font-family: 'Arial Black', sans-serif;" class="nav-link text-dark" asp-controller="Home" asp-action="Products"><b>Products</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a <a style="color: black; padding: 20px; text-align: center; font-size: 20px; font-family: 'Arial Black', sans-serif;" class="nav-link text-dark" asp-controller="Home" asp-action="AboutUs"><b>About Me</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a <a style="color: black; padding: 20px; text-align: center; font-size: 20px; font-family: 'Arial Black', sans-serif;" class="nav-link text-dark" asp-controller="Home" asp-action="AdminHomepage"><b>Administration</b></a>
+                        </li>
+                    </ul>
+
+                    <div class="col-auto navbar-text" style="display: flex; justify-content: flex-end; align-items: center;">
+                        <partial name="_LoginPartial" />
+                        <vc:cart-summary />
+                    </div>
+
+                </div>
+
+            </div>
+        </nav>
+    </header>
+    <!-- End of Navbar -->
+
+
+    <div class="m-1 p-1">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
+    </div>
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
+</body>
 </html>
