--- a/Views/Home/AddProduct.cshtml
+++ b/Views/Home/AddProduct.cshtml
@@ -33,6 +33,10 @@
     <label asp-for="SecondaryColor">SecondaryColor:</label>
     <input asp-for="SecondaryColor" type="text" style="width: 100%; padding: 8px; margin-bottom: 16px; box-sizing: border-box;"><br /><br />
 
-    <button type="submit" style="background-color: ##e8040c; border-color:black; color: white; padding: 10px; border: none; border-radius: 4px; cursor: pointer; margin: auto; display: block;"><b>Submit</b></button>
+    <button type="submit" style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
+       color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black;
+       font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px; margin: auto;">
+        <b>Submit</b>
+    </button>
 
 </form>
