--- a/Views/Home/AdminProducts.cshtml
+++ b/Views/Home/AdminProducts.cshtml
@@ -52,20 +52,28 @@
                     <td style="text-align:center; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@x.PrimaryColor</td>
                     <td style="text-align:center; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@x.SecondaryColor</td>
                     <td style="text-align:center;">
-                        <button class="btn btn-info" asp-controller="Home" asp-action="EditProduct" asp-route-id="@x.ProductId"
-                            style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
-                            color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black;
-                            font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
-                            Edit
-                        </button>
+                        <form asp-controller="Home" asp-action="EditProduct" asp-route-id="@x.ProductId" method="get" style="display: inline;">
+                            <button class="btn btn-info"
+                                    style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
+                                       color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black;
+                                       font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;"
+                                    type="submit">
+                                <b>Edit</b>
+                            </button>
+                        </form>
                     </td>
+
                     <td style="text-align:center;">
-                        <button class="btn btn-danger" asp-controller="Home" asp-action="DeleteProduct" asp-route-id="@x.ProductId"
-                            style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
-                            color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black;
-                            font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
-                            Delete
-                        </button>
+                        <form method="get" asp-controller="Home" asp-action="DeleteProduct" asp-route-id="@x.ProductId" style="display: inline;">
+                            <button class="btn btn-danger"
+                                    style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
+                                        color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black;
+                                        font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;"
+                                    type="submit">
+                                Delete
+                            </button>
+                        </form>
+
                     </td>
 
                 </tr>
