--- a/Views/Home/AdminCustomers.cshtml
+++ b/Views/Home/AdminCustomers.cshtml
@@ -1,4 +1,8 @@
-﻿<h1>Admin Table for Customers</h1>
+﻿@using INTEX_II_413.Models.ViewModels
+
+@model CustomerListViewModel
+
+<h1>Admin Table for Customers</h1>
 
 <table class="table table-bordered table-striped">
 
@@ -54,3 +58,19 @@
     </tbody>
 
 </table>
+
+<div class="row justify-content-between">
+    <!-- Pagination at the bottom of the products list -->
+    <div class="col-auto">
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                @for (int i = 1; i <= Model.PaginationInfo.TotalPages; i++)
+                {
+                    <li class="page-item @(i == Model.PaginationInfo.CurrentPage ? "active" : "")">
+                        <a class="page-link" href="@Url.Action("AdminProducts", "Home", new { pageNum = i, pageSize = Model.PaginationInfo.ItemsPerPage, productCategory = Model.CurrentProductCategory, productColor = Model.CurrentProductColor })">@i</a>
+                    </li>
+                }
+            </ul>
+        </nav>
+    </div>
+</div>
