--- a/Views/Home/Help.cshtml
+++ b/Views/Home/Help.cshtml
@@ -1,6 +1,7 @@
 ﻿<body>
-    <div class="container">
-        <h1 class="mt-5">Help and Documentation</h1>
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">Help and Documentation</h1>
+
         <div class="documentation-section">
             <h2>1. Introduction</h2>
             <p>Welcome to Aurora's Bricks! We're delighted to have you here. Our platform is dedicated to providing LEGO enthusiasts with an exceptional shopping experience. This comprehensive guide will assist you in navigating our website effectively.</p>
@@ -23,19 +24,19 @@
         </div>
 
         <div class="documentation-section">
-            <h2>4. Browsing Products</h2>
-            <ul>
-                <li><strong>Filtering Options:</strong> Use filters to narrow down products by category, color, and count for a more refined search experience.</li>
-                <li><strong>Viewing Product Details:</strong> Click on a product to view its detailed description, images, and specifications.</li>
-            </ul>
-        </div>
-
-        <div class="documentation-section">
-            <h2>5. Cart and Checkout</h2>
+            <h2>4. Cart and Checkout</h2>
             <ul>
                 <li><strong>Adding Items to Cart:</strong> Add desired products to your cart for purchase.</li>
                 <li><strong>Checkout Process:</strong> Proceed to checkout to review your order, enter shipping details, and make payments.</li>
                 <li><strong>Checkout Review:</strong> Your checkout may be reviewed for security purposes to maintain integrity and prevent fraudulent activities.</li>
+            </ul>
+        </div>
+
+        <div class="documentation-section">
+            <h2>5. Browsing Products</h2>
+            <ul>
+                <li><strong>Filtering Options:</strong> Use filters to narrow down products by category, color, and count for a more refined search experience.</li>
+                <li><strong>Viewing Product Details:</strong> Click on a product to view its detailed description, images, and specifications.</li>
             </ul>
         </div>
 
@@ -52,6 +53,11 @@
             <ul>
                 <li><strong>Customer Support:</strong> For any queries, feedback, or assistance, feel free to reach out to our customer support team at algorithmicallies@gmail.com.</li>
             </ul>
+        </div>
+
+        <div class="documentation-section">
+            <h2>8. Conclusion</h2>
+            <p>Thank you for taking the time to explore our help and documentation. We hope this guide has been helpful in understanding how to use our platform effectively. If you have any further questions or need assistance, please don't hesitate to contact us.</p>
         </div>
     </div>
 </body>
