--- a/Views/Home/AdminOrders.cshtml
+++ b/Views/Home/AdminOrders.cshtml
@@ -1,4 +1,8 @@
-﻿<h1>List of Orders that have been placed</h1>
+﻿@using INTEX_II_413.Models.ViewModels
+@model OrdersListViewModel
+
+<h1>List of Orders that have been placed</h1>
+<vc:fraud-filter/>
 
 <table class="table table-bordered table-striped">
     <thead class="thead-dark" style="background-color: #e8040c;">
@@ -21,10 +25,8 @@
     </thead>
 
     <tbody>
-        @foreach (var x in Model)
+        @foreach (var x in Model.Orders)
         {
-            @if ((x.FraudPredicted == true)  || x.FraudPredicted != null )
-            {
                 <tr>
                     <td style="text-align:center">@x.TransactionId</td>
                     <td style="text-align:center">@x.CustomerId</td>
@@ -41,7 +43,22 @@
                     <td style="text-align:center">@x.Fraud</td>
                     <td style="text-align:center">@x.FraudPredicted</td>
                 </tr>
-            }
         }
     </tbody>
 </table>
+
+<div class="row justify-content-between">
+    <!-- Pagination at the bottom of the products list -->
+    <div class="col-auto">
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                @for (int i = 1; i <= Model.PaginationInfo.TotalPages; i++)
+                {
+                    <li class="page-item @(i == Model.PaginationInfo.CurrentPage ? "active" : "")">
+                        <a class="page-link" href="@Url.Action("AdminOrders", "Home", new { pageNum = i, pageSize = Model.PaginationInfo.ItemsPerPage})">@i</a>
+                    </li>
+                }
+            </ul>
+        </nav>
+    </div>
+</div>
