--- a/Views/Home/AdminCustomers.cshtml
+++ b/Views/Home/AdminCustomers.cshtml
@@ -23,7 +23,7 @@
 
 
     <tbody>
-        @foreach (var x in Model)
+        @foreach (var x in Model.Customers)
         {
             <tr>
                 <td style="text-align:center">@x.CustomerId</td>
@@ -59,18 +59,42 @@
 
 </table>
 
-<div class="row justify-content-between">
+<div class="row justify-content-between" style="display: inline-block;">
     <!-- Pagination at the bottom of the products list -->
-    <div class="col-auto">
+    <div class="col-auto" style="display: inline-block;">
         <nav aria-label="Page navigation">
             <ul class="pagination">
-                @for (int i = 1; i <= Model.PaginationInfo.TotalPages; i++)
+                @if (Model.PaginationInfo.TotalPages > 0)
                 {
-                    <li class="page-item @(i == Model.PaginationInfo.CurrentPage ? "active" : "")">
-                        <a class="page-link" href="@Url.Action("AdminProducts", "Home", new { pageNum = i, pageSize = Model.PaginationInfo.ItemsPerPage, productCategory = Model.CurrentProductCategory, productColor = Model.CurrentProductColor })">@i</a>
-                    </li>
+                    @if (Model.PaginationInfo.CurrentPage > 1)
+                    {
+                        <li class="page-item">
+                            <a class="page-link" href="@Url.Action("AdminCustomers", "Home", new { pageNum = 1 })">First</a>
+                        </li>
+                    }
+                    @if (Model.PaginationInfo.CurrentPage > 5)
+                    {
+                        <li class="page-item disabled"><span class="page-link">...</span></li>
+                    }
+                    @for (int i = Math.Max(1, Model.PaginationInfo.CurrentPage - 2); i <= Math.Min(Model.PaginationInfo.TotalPages, Model.PaginationInfo.CurrentPage + 2); i++)
+                    {
+                        <li class="page-item @(i == Model.PaginationInfo.CurrentPage ? "active" : "")">
+                            <a class="page-link" href="@Url.Action("AdminCustomers", "Home", new { pageNum = i })">@i</a>
+                        </li>
+                    }
+                    @if (Model.PaginationInfo.CurrentPage < Model.PaginationInfo.TotalPages - 4)
+                    {
+                        <li class="page-item disabled"><span class="page-link">...</span></li>
+                    }
+                    @if (Model.PaginationInfo.CurrentPage < Model.PaginationInfo.TotalPages)
+                    {
+                        <li class="page-item">
+                            <a class="page-link" href="@Url.Action("AdminCustomers", "Home", new { pageNum = Model.PaginationInfo.TotalPages })">Last</a>
+                        </li>
+                    }
                 }
             </ul>
         </nav>
     </div>
 </div>
+
