Made back to admin portal buttons for all 3 admin tables

--- a/Views/Home/AdminCustomers.cshtml
+++ b/Views/Home/AdminCustomers.cshtml
@@ -1,4 +1,19 @@
-﻿<h1>Admin Table for Customers</h1>
+﻿<br />
+<div style="display: flex; align-items: center;">
+    <div>
+        <form asp-controller="Home" asp-action="AdminHomepage" method="get">
+            <button type="submit" class="btn" style="outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
+                   color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black;
+                   font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
+                <b>Return to Admin Portal</b>
+            </button>
+        </form>
+    </div>
+    <div style="flex-grow: 1; text-align: center;">
+        <h1 style="color: black; padding: 20px; text-align: center; font-size: 48px; font-family: 'Arial Black' , sans-serif;" class="text-center">Customers</h1color:>
+    </div>
+</div>
+
 
 <table class="table table-bordered table-striped">
 
