--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
         </div>
     </section>
 
-    <div class="row">
+    <div class="row justify-content-center">
         <div class="col-6 text-center">
             <a class="btn btn-outline-danger" asp-controller="Home" asp-action="Products">See More Legos</a>
         </div>
