--- a/Views/Home/EditCustomer.cshtml
+++ b/Views/Home/EditCustomer.cshtml
@@ -26,6 +26,8 @@
     <label asp-for="Age">Age:</label>
     <input asp-for="Age" type="text" required style="width: 100%; padding: 8px; margin-bottom: 16px; box-sizing: border-box;"><br /><br />
 
+    <a class="btn btn-secondary" href="@Url.Action("EditCustomerRoles", "Home", new { userId = Model.AspNetUserId })">Edit Roles</a>
+
     <button type="submit"
             class="btn btn-info"
             style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
