--- a/Views/Home/AdminOrders.cshtml
+++ b/Views/Home/AdminOrders.cshtml
@@ -1,25 +1,38 @@
 ﻿@model INTEX_II_413.Models.ViewModels.OrdersListViewModel
 
-<h1>List of Orders that have been placed</h1>
-<vc:fraud-filter />
+<div style="display: flex; justify-content: space-between; align-items: center; text-align: center;">
+    <div style="text-align: left;">
+        <vc:fraud-filter />
+    </div>
+    <h1 style="color: black; padding: 20px; text-align: center; font-size: 48px; font-family: 'Arial Black' , sans-serif;">Orders</h1>
+    <div style="text-align: right;">
+        <form asp-controller="Home" asp-action="AdminHomepage" method="get">
+            <button type="submit" class="btn" style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
+               color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black;
+               font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px; width: 200px;">
+                <b>Return to Admin Portal</b>
+            </button>
+        </form>
+    </div>
+</div>
 
 <table class="table table-bordered table-striped">
     <thead class="thead-dark" style="background-color: #e8040c;">
         <tr>
-            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">TransactionId</th>
-            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">CustomerId</th>
-            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Date</th>
-            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">DayOfWeek</th>
-            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Time</th>
-            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">CardType</th>
-            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">EntryMode</th>
-            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Amount</th>
-            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Type</th>
-            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Country</th>
-            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Address</th>
-            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Bank</th>
-            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Fraud</th>
-            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">FraudPredicted?</th>
+            <th style="text-align:center; vertical-align: middle; background-color: #e8040c; color: white; font-weight: bold;">Transaction ID</th>
+            <th style="text-align:center; vertical-align: middle; background-color: #e8040c; color: white; font-weight: bold;">Customer ID</th>
+            <th style="text-align:center; vertical-align: middle; background-color: #e8040c; color: white; font-weight: bold;">Date</th>
+            <th style="text-align:center; vertical-align: middle; background-color: #e8040c; color: white; font-weight: bold;">Day Of Week</th>
+            <th style="text-align:center; vertical-align: middle; background-color: #e8040c; color: white; font-weight: bold;">Time</th>
+            <th style="text-align:center; vertical-align: middle; background-color: #e8040c; color: white; font-weight: bold;">Card Type</th>
+            <th style="text-align:center; vertical-align: middle; background-color: #e8040c; color: white; font-weight: bold;">Entry Mode</th>
+            <th style="text-align:center; vertical-align: middle; background-color: #e8040c; color: white; font-weight: bold;">Amount</th>
+            <th style="text-align:center; vertical-align: middle; background-color: #e8040c; color: white; font-weight: bold;">Type</th>
+            <th style="text-align:center; vertical-align: middle; background-color: #e8040c; color: white; font-weight: bold;">Country</th>
+            <th style="text-align:center; vertical-align: middle; background-color: #e8040c; color: white; font-weight: bold;">Address</th>
+            <th style="text-align:center; vertical-align: middle; background-color: #e8040c; color: white; font-weight: bold;">Bank</th>
+            <th style="text-align:center; vertical-align: middle; background-color: #e8040c; color: white; font-weight: bold;">Fraud</th>
+            <th style="text-align:center; vertical-align: middle; background-color: #e8040c; color: white; font-weight: bold;">Fraud Predicted?</th>
         </tr>
     </thead>
 
